# parcae-srpo

./: .gitignore  README.md  log.txt  pyproject.toml
scripts/: colab_a100_start.sh  colab_unsloth_srpo_start.sh  train_srpo.py  train_unsloth_srpo.py  train_windows.py
src/parcae/: injection.py  model.py
tests/: test_grpo_loss.py  test_recurrent_backend_helpers.py  test_sample_logging.py  test_unsloth_srpo_helpers.py
